# iced-yt-dlp

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: .main.rs.rustfmt  download_options.rs  main.rs  utils.rs
